--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
     -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <title>SheyRooms</title>
+    <title>Book-A-Trip</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
